add `acava-postgresql` module

--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,7 @@
         <module>acava-common</module>
         <module>acava-mongo</module>
         <module>acava-discord</module>
+        <module>acava-postgresql</module>
     </modules>
 
     <properties>
