--- a/acava-common/pom.xml
+++ b/acava-common/pom.xml
@@ -53,10 +53,16 @@
     </build>
 
     <dependencies>
-        <dependency>
+        <dependency> <!-- Gson -->
             <groupId>com.google.code.gson</groupId>
             <artifactId>gson</artifactId>
             <version>2.10</version>
+        </dependency>
+
+        <dependency> <!-- Guava -->
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <version>31.1-jre</version>
         </dependency>
     </dependencies>
 
