--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
         <module>acava-discord</module>
         <module>acava-postgresql</module>
         <module>acava-http</module>
+        <module>acava-math</module>
     </modules>
 
     <properties>
